image upload changes

--- a/src/app/main/managephotos/managephoto.html
+++ b/src/app/main/managephotos/managephoto.html
@@ -117,7 +117,7 @@
 
                     </div>
                 </div>
-                <div class="col-md-12" ng-if="viewType != 'group'">
+                <div class="col-md-12" ng-if="viewType == 'managephoto'  ">
 
                     <div class="row">
                         <div class="col-sm-3" ng-click="group('general')">
