--- a/src/app/main/managephotos/managephoto.html
+++ b/src/app/main/managephotos/managephoto.html
@@ -51,12 +51,14 @@
             <!-- BEGIN PAGE BASE CONTENT -->
 
             <div class="row">
+
+
                 <div class="col-md-12 ">
                     <!-- BEGIN SAMPLE FORM PORTLET-->
                     <div class="portlet light "
-                         style="padding-top: 0px"  ng-if="viewType != 'group'">
+                         style="padding-top: 0px" ng-if="viewType != 'group'">
 
-                        <div class=" row vp-main-action" >
+                        <div class=" row vp-main-action">
                             <div style="text-transform: uppercase;text-align: center;">
                                 <div class="col-md-6 vp-main-link2 "
                                      ng-class="{'active-link': viewType == 'managephoto'}"
@@ -89,22 +91,27 @@
                                       <div class="upload-btn-wrapper">
                                           <button class="btn"
                                                   style="background-image:url('../assets/images/upload.png');width: 180px;height: 180px "></button>
-                                          <input type="file" file-model="myFile" name="myFile"/>
+                                          <input type="file" id="myFile1" onchange="angular.element(this).scope().uploadFile(this.files)" class="upload">
                                       </div>
-                                                         <button ng-click="uploadFile()">upload me</button>
 
 
                                 </span></div>
                                         </div>
                                     </div>
                                     <div class="col-md-1"></div>
-                                    <div class="col-md-6">
+                                    <div class="col-md-6" >
+                                            <div ng-if="uploadmsg != ''" class=" alert-dismissable">
+                                                <button type="button" class="close" data-dismiss="alert" aria-hidden="true"></button>
+                                              {{uploadmsg}}. </div>
 
-                                        <div class="fileUpload btn btn-primary">
-                                            <span>Upload</span>
-                                            <input type="file" id="myFile" class="upload">
-
+                                        <div class="fileUpload btn btn-sm red-mint">
+                                            <span><i class="fa fa-camera"></i> My Computer
+                                            </span>
+                                            <input type="file" id="myFile" onchange="angular.element(this).scope().uploadFile(this.files)" class="upload">
                                         </div>
+                                        <!--<div >{{fileName}}</div>-->
+                                        <!--<button ng-click="uploadFile()">Try it</button>-->
+
 
 
                                     </div>
@@ -113,7 +120,6 @@
                         </div>
 
                         <!--<input type="file" id="myFile">-->
-                        <button ng-click="uploadFile()">Try it</button>
 
                     </div>
                 </div>
@@ -126,43 +132,43 @@
                             <div class="thumbnail">
 
                                 <div style="height: 150px;width: 100%;line-height: 140px;text-align:center">
-                                    <b>General</b>
+                                    <b>General </b>
                                 </div>
 
                                 <!--<img ng-src="{{image.image}}" alt="{{image.description}}">-->
                             </div>
                         </div>
-                        <div class="col-sm-3" ng-click="group('family')">
+                        <!--<div class="col-sm-3" ng-click="group('family')">-->
 
 
-                            <div class="thumbnail">
+                            <!--<div class="thumbnail">-->
 
-                                <div style="height: 150px;width: 100%;line-height: 140px;text-align:center">
-                                    <b>Family & Friends</b>
-                                </div>
+                                <!--<div style="height: 150px;width: 100%;line-height: 140px;text-align:center">-->
+                                    <!--<b>Family & Friends</b>-->
+                                <!--</div>-->
 
-                                <!--<img ng-src="{{image.image}}" alt="{{image.description}}">-->
-                            </div>
-                        </div>
+                                <!--&lt;!&ndash;<img ng-src="{{image.image}}" alt="{{image.description}}">&ndash;&gt;-->
+                            <!--</div>-->
+                        <!--</div>-->
 
-                        <div class="col-sm-3" ng-click="group('others')">
+                        <!--<div class="col-sm-3" ng-click="group('others')">-->
 
 
-                            <div class="thumbnail">
+                            <!--<div class="thumbnail">-->
 
-                                <div style="height: 150px;width: 100%;line-height: 140px;text-align:center">
-                                    <b>Others</b>
-                                </div>
+                                <!--<div style="height: 150px;width: 100%;line-height: 140px;text-align:center">-->
+                                    <!--<b>Others</b>-->
+                                <!--</div>-->
 
-                                <!--<img ng-src="{{image.image}}" alt="{{image.description}}">-->
-                            </div>
-                        </div>
+                                <!--&lt;!&ndash;<img ng-src="{{image.image}}" alt="{{image.description}}">&ndash;&gt;-->
+                            <!--</div>-->
+                        <!--</div>-->
                     </div>
                 </div>
 
                 <div class="col-md-12" ng-if="viewType == 'group'">
 
-                    <div >
+                    <div>
                         <div class="row">
                             <div class="col-md-12" style="height: 50px;width:100%;line-height:50px;
                       font-size: 20px;font-weight: bold;color: #0086B3"><span
