--- a/src/app/main/managephotos/managephoto.html
+++ b/src/app/main/managephotos/managephoto.html
@@ -184,6 +184,9 @@
                                 <div class="thumbnail">
                                     <img ng-src="{{image.image}}" alt="{{image.description}}">
                                 </div>
+                                <div>
+                                    <input type="checkbox" ng-model="profilePic" ng-value="{{image.number}}" ng-click="changeProfilePic(image)">
+                                    </div>
                             </div>
                         </div>
                     </div>
