--- a/src/app/core/layouts/dbLayout.html
+++ b/src/app/core/layouts/dbLayout.html
@@ -1,7 +1,7 @@
 <div class="page-container-bg-solid page-header-fixed page-sidebar-closed-hide-logo">
 <div ui-view="toolbar"></div>
 <div class="clearfix"></div>
-    <div class="row">
+    <div class="row" style="margin-right:0px">
         <div class="col-md-1"></div>
         <div class="col-md-8">
 
