--- a/src/app/main/matches/matches.html
+++ b/src/app/main/matches/matches.html
@@ -158,10 +158,10 @@
                                          style="padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro"><i
                                             class="fa fa-commenting-o"></i> Chat now
                                     </div>
-                                    <div class="col-md-3"
+                                    <button class="col-md-3" ng-click="sendInterest(item.id_people)"
                                          style="padding: 20px;border: 1px solid #eef1f5;background-color: #e7505a"><i
                                             class="fa fa-heart" style="color: white!important;font-size: 18px"></i> Send Interest
-                                    </div>
+                                    </button>
 
                                 </div>
                             </div>
