sent all and awaiting reply api added

--- a/src/app/main/message/awaitingReply/awaiting.html
+++ b/src/app/main/message/awaitingReply/awaiting.html
@@ -53,7 +53,7 @@
 
 
             </div>
-            <span ng-repeat="item in sent_all">
+            <span ng-repeat="item in awaiting">
             <div class="portlet light  border-rounded">
 
                 <div class="portlet-body form">
