--- a/src/app/main/login/loginContent.html
+++ b/src/app/main/login/loginContent.html
@@ -166,7 +166,7 @@
         <div class="form-group">
             <label class=" uppercase">Email / Mobile Number / Member Id</label>
             <input class="form-control spinner input-rounded" type="text"
-                   placeholder="Email / Mobile NUmber / Member ID" ng-model="login.username" required/>
+                   placeholder="Email / Mobile Number / Member ID" ng-model="login.username" required/>
         </div>
         <div class="form-group">
             <label class=" uppercase"> Password</label>
