--- a/src/app/navigation/settings/settingNavigation.html
+++ b/src/app/navigation/settings/settingNavigation.html
@@ -1,5 +1,5 @@
 <div class="page-sidebar-wrapper ">
-       <div class="page-sidebar navbar-collapse collapse border-rounded" style="border-radius: 10px">
+       <div class="page-sidebar navbar-collapse collapse border-rounded" style="background-color:#e4e8eb!important;;border-radius: 10px">
                 <ul class="page-sidebar-menu border-rounded   " style="background-color: white" data-keep-expanded="false" data-auto-scroll="true" data-slide-speed="200">
 
 
