--- a/src/app/main/message/sent/sent.html
+++ b/src/app/main/message/sent/sent.html
@@ -76,7 +76,7 @@
                             <div ng-if="item.user.isOnline = 'online'" class="col-md-4"><i class="fa fa-circle " style="color:#56bb55 ;padding-top:5px;"></i>&nbsp;<label>Online</label>
                             </div>
                             <div class="col-md-3 pull-right"><label class="style-cls">{{item.date}}</label><i
-                                    class="fa fa-trash  pull-right style-cls " style="padding-top:5px;"></i></div>
+                                    class="fa fa-trash  pull-right style-cls " style="padding-top:5px;" ng-click="deleteSent(item.com_id)" ></i></div>
                         </div>
                         <div class="row">
                             <div class="col-md-12 details-style">
