--- a/src/app/navigation/message/inbox/inboxNavigation.html
+++ b/src/app/navigation/message/inbox/inboxNavigation.html
@@ -8,12 +8,12 @@
                             <li style="background-color:#e8e6e8;height:37px;padding: 9px 14px 9px 30px;" class="nav-item " id="inbox">
                                     <span class="title"><b>Inbox</b></span>
                             </li>
-                            <li  ng-class="{ activateSettingNavBar: isActive('/messages')}" class="nav-item " id="inbox">
-                                <a ui-sref="messages" class="nav-link ">
+                            <li   class="nav-item " >
+                                <a  class="nav-link ">
                                     <span >ALL</span>
                                 </a>
                             </li>
-                            <li ng-class="{ activateSettingNavBar: isActive('/messages/pending')}" class="nav-item" id="pending">
+                            <li ng-class="{ activateSettingNavBar: isActive('/messages')}" class="nav-item" id="pending">
                                 <a ui-sref="messages.pending" class="nav-link ">
                                     <span class="title">Pending</span>
                                 </a>
@@ -37,7 +37,7 @@
 
                     <li class="nav-item  active open">
                         <ul class="sub-menu settingnav" >
-                            <li style="background-color:#e8e6e8;height:37px;padding: 9px 14px 9px 30px;" class="nav-item " id="inbox">
+                            <li style="background-color:#e8e6e8;height:37px;padding: 9px 14px 9px 30px;" class="nav-item " >
                                     <span ><b>Search message by id</b></span>
                             </li>
                             <li class="nav-item " style="text-align: center">
