--- a/src/app/navigation/message/inbox/inboxNavigation.html
+++ b/src/app/navigation/message/inbox/inboxNavigation.html
@@ -14,7 +14,7 @@
                                 </a>
                             </li>
                             <li ng-class="{ activateSettingNavBar: isActive('/messages')}" class="nav-item" id="pending">
-                                <a ui-sref="messages.pending" class="nav-link ">
+                                <a ui-sref="messages" class="nav-link ">
                                     <span class="title">Pending</span>
                                 </a>
                             </li>
